src/main/webapp/css/newStyle.css
/* ... */
#newFooterWrapper .fright {
  float: right;
  margin-right: 4.5em;
  padding-top: 4px;
}
#newFooterWrapper .fleft {
  float: left;
}
#newFooterWrapper .main-navigation .main-nav ul li[class*="current-menu-"] > a {
  color: #ffffff !important;
  text-decoration: underline !important;
  background-color: #5f5f5f !important;
}
#newFooterWrapper #wp_editor_widget-8 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-9 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-11 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-12 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-13 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-14 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-15 > h4[class*="widget-title"], #newFooterWrapper #wp_editor_widget-16 > h4[class*="widget-title"] {
  font-weight: bold;
}
#newFooterWrapper .navigation-search {
  /*display: block!important;*/
}
#newFooterWrapper .search-field {
  /*margin-top: 60px;*/
  /* width: 50%;
    float: right;*/
}
#newFooterWrapper .navigation-search input {
  /*  width: 25%!important;
  float: right;*/
}
#newFooterWrapper .lang-item {
  display: inline;
}
#newFooterWrapper .inside-header {
  padding: 0 !important
}
#newFooterWrapper #polylang-2 {
  display: inline;
}
#newFooterWrapper div[class*="site-logo"] > a > img {
  max-width: 80% !important;
}
#newFooterWrapper .documentDescription {
  font-style: normal;
}
@media screen and (min-width: 769px) {
  #newFooterWrapper div[class*="su-column"] > p > a > img:hover {
    backgroud-color: #0064a3 !important;
    backgroud: #0064a3 !important;
    color: #0064a3 !important;
    opacity: 0.65;
    filter: alpha(opacity=65);
    transform: scale(1.05);
    -webkit-transition-duration: 1s
  }
}
@media screen and (min-width: 769px) {
  #newFooterWrapper div[class*="su-row"] > a > img:hover {
    backgroud-color: #0064a3 !important;
    backgroud: #0064a3 !important;
    color: #0064a3 !important;
    opacity: 0.65;
    filter: alpha(opacity=65);
    transform: scale(1.05);
    -webkit-transition-duration: 1s
  }
}
@media screen and (max-width: 768px) {
  #newFooterWrapper .expanded {
    display: none;
  }
  #newFooterWrapper .entry-title a:hover {
    text-decoration: underline;
  }
  #newFooterWrapper .site-header a {
    padding-right: 15px;
  }
  #newFooterWrapper .site-header a, #newFooterWrapper .site-header a:visited {
    color: #1e73be !important;
  }
  #newFooterWrapper div[class*="su-column"] > div[class*="su-column-inner"] > p {
    margin-bottom: 0px;
  }
  a#PageButton, a#ImageButton, a#advancedSearchButton {
    font-size: 14px !important;
  }
  body#home-search p#estimated-results {
    margin-top: /*0*/ -5px !important;
    margin-left: 0 !important;
  }
  #resultados-lista ul li .resumo {
    font-size: 16px !important;
  }
  
  #resultados-lista ul li h2 {
    font-size: 20px;   
}

body#homeImages #searchBarButtonsDiv {
    margin-bottom: 26px !important;
}

#home-search #searchBarButtonsDiv {
margin-bottom: 2px;
}

.next a, .previous a {
   width: 100%; 
}

.url {      
    font-size: 15px; 
}
body#homepage-landing div#flex-container { 
    margin: 8px auto 0 auto !important;
}

#resultados-lista ul {
    width: auto; 
}

.grouped {display: none}

}

body#home-search .url-search-container {
margin-top: 5px !important;
}



@media screen and (min-width: 1025px) {
  #newFooterWrapper #site-navigation > div > form {
    display: none;
  }
  #newFooterWrapper .search-item {
    display: none;
  }
}
@media screen and (min-width: 769px) and (max-width: 1024px) {
  #newFooterWrapper #site-navigation > div > form {
    display: block !important;
    width: 45% !important;
  }
}
@media screen and (min-width: 251px) and (max-width: 768px) {
  #newFooterWrapper #site-navigation > div > form {
    display: block !important;
    width: 45% !important;
  }
}
@media screen and (max-width: 400px) {
  /*Show search result box in search results page with max width in small screens*/
  #newFooterWrapper .resultsBox {
    width: 100%;
  }
  /*Hide placeholder Search: for very small screens*/
  #newFooterWrapper ::-webkit-input-placeholder { /* WebKit browsers */
    color: transparent;
  }
  #newFooterWrapper :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color: transparent;
  }
  #newFooterWrapper ::-moz-placeholder { /* Mozilla Firefox 19+ */
    color: transparent;
  }
  #newFooterWrapper :-ms-input-placeholder { /* Internet Explorer 10+ */
    color: transparent;
  }
  #newFooterWrapper textarea::-webkit-input-placeholder { /* WebKit browsers */
    color: transparent;
  }
  #newFooterWrapper textarea:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color: transparent;
  }
  #newFooterWrapper textarea::-moz-placeholder { /* Mozilla Firefox 19+ */
    color: transparent;
  }
  #newFooterWrapper textarea:-ms-input-placeholder { /* Internet Explorer 10+ */
    color: transparent;
  }
}
@media screen and (max-width: 250px) {
  #newFooterWrapper #site-navigation > div > form {
    display: none !important;
  }
  #newFooterWrapper .mobile-bar-items {
    display: none !important;
  }
}
#newFooterWrapper div[class*="su-column"] > p > a > img {
  border: 2px solid #efefef;
}
#newFooterWrapper .site-info {
  background-color: #efefef;
   !important;
  text-align: center;
}
#newFooterWrapper .navigation-search input[type="search"], #newFooterWrapper .navigation-search input[type="search"]:active {
  background-color: #fafafa;
  background: #FAFAFA !important;
  color: #666;
  border: 1px solid #ccc;
  border-radius: 0;
  padding: 10px 15px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  max-width: 100%;
}
#newFooterWrapper .widget ul li {
  list-style-type: none;
  position: relative;
  padding-bottom: 5px;
}
/*End Simple CSS*/
#newFooterWrapper .widget-title {
  margin-bottom: 30px;
  font-size: 15px;
  line-height: 1.5;
}
/* ... */

